# tracker

./: .gitignore  .replit  README.md  pyproject.toml  replit.md  weight.py  weight.txt  weightpy.txt
src/: server.py  weight.py
src/weight_tracker/: __init__.py  api.py  cli.py
src/weight_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
