[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weight_tracker"
version = "2.0"
description = "A weight tracking application with CLI and REST API interface"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Ryan Hubbart"}
]
dependencies = [
  "flask>=2.0",
  "matplotlib>=3.5"
]

[project.urls]
Homepage = "https://github.com/hub-ry/tracker"
Repository = "https://github.com/hub-ry/tracker.git"

[project.scripts]
weight-cli = "weight_tracker.cli:main"

[project.optional-dependencies]
dev = [
  "black>=23.0",
  "pytest>=7.0"
]